// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`BpkAccordion should render correctly 1`] = `
<DocumentFragment>
  <div
    class="bpk-accordion"
    data-backpack-ds-component="Accordion"
  >
    Accordion child
  </div>
</DocumentFragment>
`;

exports[`BpkAccordion should render correctly with custom "className" prop 1`] = `
<DocumentFragment>
  <div
    class="bpk-accordion my-custom-class"
    data-backpack-ds-component="Accordion"
  >
    Accordion child
  </div>
</DocumentFragment>
`;
